--- a/chat.html
+++ b/chat.html
@@ -162,6 +162,39 @@
         .send-button:hover { background-color: #2a3bb0; }
         .attach-button, .emoji-button { background: none; border: none; color: var(--light-text); font-size: 1.3rem; margin-right: 0.8rem; cursor: pointer; flex-shrink: 0; }
 
+        .footer-socials h3 {
+            font-size: 1rem;
+            margin-bottom: 1rem;
+            color: var(--white); 
+        }
+
+        /* Container for the list of icons */
+        .social-icons-list {
+            display: flex;      
+            flex-wrap: wrap;     
+            gap: 12px;          
+        }
+
+        /* Styling for each icon's link container */
+        .social-icon-item {
+            display: inline-block; 
+            width: 30px;           
+            height: 30px;         
+            line-height: 0;        
+            transition: transform 0.2s ease; 
+        }
+
+        .social-icon-item:hover {
+            transform: scale(1.1); 
+        }
+
+        .social-icon-item img {
+            width: 100%;           
+            height: 100%;          
+            object-fit: contain;   
+            display: block;       
+        }
+
     </style>
 </head>
 <body>
@@ -177,8 +210,8 @@
                 <li><a href="ranking.html" class="nav-item animated-underline">Ranking</a></li>
                 <li><a href="support.html" class="nav-item animated-underline">Support</a></li>
                 <li><a href="educonnectGPT.html" class="nav-item animated-underline">EduconnectGPT</a></li>
-                <!-- Đánh dấu trang Chat là active -->
-                <li><a href="chat.html" class="nav-item animated-underline active">Chat</a></li>
+                <li><a href="chat.html" class="active">Chat</a></li>
+                <li><a href="schedule.html" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Schedule</a></li> 
             </ul>
         </nav>
         <div class="right-actions">
