--- a/welcome.html
+++ b/welcome.html
@@ -239,6 +239,39 @@
             justify-content: center;
         }
 
+        .footer-socials h3 {
+            font-size: 1rem;
+            margin-bottom: 1rem;
+            color: var(--white); 
+        }
+
+        /* Container for the list of icons */
+        .social-icons-list {
+            display: flex;      
+            flex-wrap: wrap;     
+            gap: 12px;          
+        }
+
+        /* Styling for each icon's link container */
+        .social-icon-item {
+            display: inline-block; 
+            width: 30px;           
+            height: 30px;         
+            line-height: 0;        
+            transition: transform 0.2s ease; 
+        }
+
+        .social-icon-item:hover {
+            transform: scale(1.1); 
+        }
+
+        .social-icon-item img {
+            width: 100%;           
+            height: 100%;          
+            object-fit: contain;   
+            display: block;       
+        }
+
         @media (max-width: 768px) {
             .footer-content {
                 flex-direction: column;
@@ -322,23 +355,26 @@
                 </ul>
             </div>
             
-            <div class="payment-methods">
-                <div class="payment-icons">
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
-                    <div class="payment-icon">💳</div>
+            <div class="footer-socials"> 
+                <h3>Follow Us</h3> 
+                <div class="social-icons-list"> 
+                    <a href="YOUR_YOUTUBE_LINK" target="_blank" class="social-icon-item" title="YouTube">
+                        <img src="images/Youtube.jpg" alt="YouTube"> 
+                    </a>
+                    <a href="YOUR_FACEBOOK_LINK" target="_blank" class="social-icon-item" title="Facebook">
+                        <img src="images/facebook.jpg" alt="Facebook"> 
+                    </a>
+                    <a href="YOUR_LINKEDIN_LINK" target="_blank" class="social-icon-item" title="LinkedIn">
+                        <img src="images/linkedln.jpg" alt="LinkedIn"> 
+                    <a href="YOUR_TIKTOK_LINK" target="_blank" class="social-icon-item" title="TikTok">
+                        <img src="images/tiktok.jpg" alt="TikTok">
+                    </a>
+                    <a href="YOUR_INSTAGRAM_LINK" target="_blank" class="social-icon-item" title="Instagram">
+                        <img src="images/insta.jpg" alt="Instagram"> 
+                    </a>
+                    <a href="YOUR_DISCORD_LINK" target="_blank" class="social-icon-item" title="Discord">
+                        <img src="images/discord.jpg" alt="Discord"> 
+                    </a>
                 </div>
             </div>
         </div>
