--- a/schedule.html
+++ b/schedule.html
@@ -233,8 +233,8 @@
         }
 
         /* Event Positioning (Grid Area - Relative to calendar-grid) */
-        #event-thao-math { grid-area: 2 / 3 / 3 / 4; }
-        #event-thao-english { grid-area: 3 / 5 / 4 / 6; }
+        #event-thao-math { grid-area: 3 / 2 / 4 / 2; } /* Box 15 */
+        #event-thao-english { grid-area: 3 / 4 / 4 / 4; } /* Box 17 */
         #event-thao-physics { grid-area: 5 / 2 / 6 / 3; }
 
 
@@ -389,7 +389,7 @@
                     <!-- Week 2 -->
                     <div class="calendar-day"><span class="day-number">07</span></div>
                     <div class="calendar-day"><span class="day-number">08</span></div>
-                    <div class="calendar-day"><span class="day-number">09</span></div> <!-- Math event here -->
+                    <div class="calendar-day"><span class="day-number">09</span></div>
                     <div class="calendar-day"><span class="day-number">10</span></div>
                     <div class="calendar-day"><span class="day-number">11</span></div>
                     <div class="calendar-day"><span class="day-number">12</span></div>
@@ -399,7 +399,7 @@
                     <div class="calendar-day"><span class="day-number">15</span></div>
                     <div class="calendar-day"><span class="day-number">16</span></div>
                     <div class="calendar-day"><span class="day-number">17</span></div>
-                    <div class="calendar-day"><span class="day-number">18</span></div> <!-- English event here -->
+                    <div class="calendar-day"><span class="day-number">18</span></div>
                     <div class="calendar-day"><span class="day-number">19</span></div>
                     <div class="calendar-day"><span class="day-number">20</span></div>
                     <!-- Week 4 -->
@@ -412,7 +412,7 @@
                     <div class="calendar-day"><span class="day-number">27</span></div>
                     <!-- Week 5 -->
                     <div class="calendar-day"><span class="day-number">28</span></div>
-                    <div class="calendar-day"><span class="day-number">29</span></div> <!-- Physics event here -->
+                    <div class="calendar-day"><span class="day-number">29</span></div>
                     <div class="calendar-day"><span class="day-number">30</span></div>
                     <div class="calendar-day"><span class="day-number">31</span></div>
                     <div class="calendar-day other-month"><span class="day-number">01</span></div>
@@ -423,17 +423,12 @@
                     <div id="event-thao-math" class="calendar-event event-blue">
                         <i class="fas fa-calculator"></i>
                         Math with Nguyễn Thị Thảo
-                        <span class="event-time">9:00 - 10:30</span>
+                        <span class="event-time">13:00 - 15:30</span>
                     </div>
                     <div id="event-thao-english" class="calendar-event event-green">
                         <i class="fas fa-book"></i>
-                        English with Nguyễn Thị Thảo
-                        <span class="event-time">14:00 - 15:00</span>
-                    </div>
-                     <div id="event-thao-physics" class="calendar-event event-purple">
-                        <i class="fas fa-atom"></i>
-                        Physics with Nguyễn Thị Thảo
-                        <span class="event-time">11:00 - 12:30</span>
+                        Math with Nguyễn Thị Thảo
+                        <span class="event-time">13:00 - 15:30</span>
                     </div>
                 </div> <!-- End calendar-grid -->
             </div> <!-- End calendar-container -->
