--- a/chat.html
+++ b/chat.html
@@ -280,7 +280,7 @@
         <nav>
             <ul>
                 <li><a href="home.html" class="nav-item animated-underline">Home</a></li>
-                <li><a href="review.html" class="nav-item animated-underline">Review</a></li>
+                <li><a href="review.html" class="nav-item animated-underline">Tutors</a></li>
                 <li><a href="ranking.html" class="nav-item animated-underline">Ranking</a></li>
                 <li><a href="support.html" class="nav-item animated-underline">Support</a></li>
                 <li><a href="educonnectGPT.html" class="nav-item animated-underline">EduconnectGPT</a></li>
@@ -331,7 +331,7 @@
             <header class="chat-header">
                 <div class="recipient-info">
                     <div class="recipient-avatar">
-                        <img id="recipientAvatar" src="avatar-placeholder.png" alt="Recipient Avatar">
+                        <img id="recipientAvatar" src="images/ảnh tutor 2.jpg" alt="Recipient Avatar">
                     </div>
                     <div>
                         <div id="recipientName" class="recipient-name">Recipient Name</div>
@@ -405,13 +405,12 @@
 
             // 1. Get parameters from URL
             const urlParams = new URLSearchParams(window.location.search);
-            const userName = urlParams.get('user') || 'Unknown User';
-            const userAvatar = urlParams.get('avatar') || 'avatar-placeholder.png';
+            const userName = urlParams.get('user') || 'Nguyễn Thị Thảo';
             const userIdParam = urlParams.get('userId');
             const userId = userIdParam ? `#${userIdParam}` : `#${userName.replace(/\s+/g, '').substring(0,6).toUpperCase()}`;
 
             // 2. Update chat header (recipient info)
-            recipientAvatarElement.src = userAvatar;
+            // The avatar is now set directly in the HTML as "images/ảnh tutor 2.jpg"
             recipientNameElement.textContent = userName;
             recipientUserIdElement.textContent = userId;
 
