--- a/home.html
+++ b/home.html
@@ -1232,7 +1232,7 @@
         <nav>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="review.html" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Review</a></li>
+                <li><a href="review.html" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Tutors</a></li>
                 <li><a href="ranking.html" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Ranking</a></li>
                 <li><a href="support.html" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Support</a></li>
                 <li><a href="educonnectGPT.html" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">EduconnectGPT</a></li>
@@ -1308,7 +1308,7 @@
     <div class="floating-buttons">
         <div class="floating-btn chat-btn" id="chatBtn">
              <!-- Make sure the path to your chat icon is correct -->
-            <img src="chaticon.png" alt="Chat">
+            <img src="images/chatbot.png" alt="Chat">
         </div>
         <div class="floating-btn post-btn" id="postBtn">
             <span>+</span>
