--- a/quiz.html
+++ b/quiz.html
@@ -751,7 +751,7 @@
             <ul>
                 <!-- Use placeholder links or actual paths -->
                 <li><a href="home.html" class="nav-item animated-underline">Home</a></li>
-                <li><a href="review.html" class="nav-item animated-underline">Review</a></li>
+                <li><a href="review.html" class="nav-item animated-underline">Tutors</a></li>
                 <li><a href="ranking.html" class="nav-item animated-underline">Ranking</a></li>
                 <li><a href="support.html" class="nav-item animated-underline">Support</a></li>
                 <li><a href="educonnectGPT.html" class="nav-item animated-underline">EduconnectGPT</a></li>
