--- a/schedule.html
+++ b/schedule.html
@@ -328,7 +328,7 @@
         <nav>
             <ul>
                  <li><a href="Home.html" class="nav-item animated-underline">Home</a></li>
-                 <li><a href="review.html" class="nav-item animated-underline">Review</a></li>
+                 <li><a href="review.html" class="nav-item animated-underline">Tutors</a></li>
                  <li><a href="ranking.html" class="nav-item animated-underline">Ranking</a></li>
                  <li><a href="support.html" class="nav-item animated-underline">Support</a></li>
                  <li><a href="educonnectGPT.html" class="nav-item animated-underline">EduconnectGPT</a></li>
