--- a/educonnectGPT.html
+++ b/educonnectGPT.html
@@ -639,36 +639,50 @@
     </footer>
 
     <script>
+        // --- DOM Element Selection ---
         const chatMessages = document.querySelector('.chat-messages');
         const textarea = document.querySelector('.chat-input');
         const sendButton = document.querySelector('.send-button');
-        const apiEndpoint = 'http://127.0.0.1:2000/edu_chatbot'; // Your FastAPI endpoint
+
+        // --- API Configuration ---
+        // IMPORTANT: Use the correct endpoint for your FastAPI chat function
+        const apiEndpoint = 'http://127.0.0.1:2000/chat_get-answer/';
 
         // --- Helper Functions ---
 
+        /**
+         * Removes all messages from the chat window.
+         */
         function clearMessages() {
             chatMessages.innerHTML = '';
         }
 
+        /**
+         * Displays a typing indicator with a spinner in the chat window.
+         */
         function showTypingIndicator() {
-            // Only add indicator if it doesn't exist
+            // Avoid adding multiple indicators
             if (!document.getElementById('typing-indicator')) {
                 const typingHTML = `
                     <div class="typing-indicator" id="typing-indicator">
-                         <div class="message-avatar"> <!-- Add avatar placeholder for alignment -->
+                         <div class="message-avatar"> <!-- Placeholder for alignment -->
                             <img src="images/Educonnect_logo.png" alt="AI Avatar">
                          </div>
                         <div class="spinner-container">
                             <div class="spinner"></div>
-                            <div class="typing-text">EduconnectGPT is typing...</div>
+                            <div class="typing-text">EduconnectGPT is thinking...</div>
                         </div>
                     </div>
                 `;
                 chatMessages.insertAdjacentHTML('beforeend', typingHTML);
+                // Scroll to show the indicator
                 chatMessages.scrollTop = chatMessages.scrollHeight;
             }
         }
 
+        /**
+         * Removes the typing indicator from the chat window.
+         */
         function hideTypingIndicator() {
             const typingIndicator = document.getElementById('typing-indicator');
             if (typingIndicator) {
@@ -676,14 +690,23 @@
             }
         }
 
+        /**
+         * Adds a message to the chat interface.
+         * @param {string} text - The message text.
+         * @param {'user' | 'ai' | 'system'} sender - The sender type ('user', 'ai', or 'system').
+         */
         function addMessage(text, sender) {
             const currentTime = new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-            const avatarSrc = sender === 'ai' ? 'images/Educonnect_logo.png' : 'images/user_avatar.png'; // Use a placeholder or actual user avatar
+            const avatarSrc = sender === 'ai' ? 'images/Educonnect_logo.png' : 'images/user_avatar.png'; // Assuming a default user avatar
             const avatarAlt = sender === 'ai' ? 'AI Avatar' : 'User Avatar';
-            const messageClass = sender === 'ai' ? 'ai' : 'user';
+            const messageClass = sender === 'ai' ? 'ai' : (sender === 'user' ? 'user' : 'system'); // Add 'system' class if needed
 
-            // Sanitize text to prevent basic XSS - more robust sanitization might be needed
+            // 1. Basic Sanitization (Prevent basic XSS)
+            // Consider using a dedicated library like DOMPurify for robust sanitization if needed.
             const sanitizedText = text.replace(/</g, "<").replace(/>/g, ">");
+
+            // 2. Format Newlines for HTML display
+            const formattedText = sanitizedText.replace(/\n/g, '<br>');
 
             const messageHTML = `
                 <div class="message ${messageClass}">
@@ -691,18 +714,22 @@
                         <img src="${avatarSrc}" alt="${avatarAlt}">
                     </div>
                     <div class="message-content">
-                        <p>${sanitizedText}</p> <!-- Use sanitized text -->
+                        <div>${formattedText}</div> <!-- Use innerHTML for <br> tags -->
                         <div class="message-time">${currentTime}</div>
                     </div>
                 </div>
             `;
 
             chatMessages.insertAdjacentHTML('beforeend', messageHTML);
-            chatMessages.scrollTop = chatMessages.scrollHeight; // Scroll to the bottom
+            // Scroll to the bottom to show the new message
+            chatMessages.scrollTop = chatMessages.scrollHeight;
         }
 
         // --- Main Chat Logic ---
 
+        /**
+         * Sends the user's message to the backend API and displays the response.
+         */
         async function sendMessage() {
             const userInput = textarea.value.trim();
             if (userInput === '') {
@@ -711,10 +738,10 @@
 
             // Add user message to UI immediately
             addMessage(userInput, 'user');
-            textarea.value = ''; // Clear input
-            textarea.style.height = 'auto'; // Reset height
+            textarea.value = ''; // Clear input field
+            textarea.style.height = 'auto'; // Reset textarea height
 
-            // Show typing indicator while waiting for API response
+            // Show typing indicator while waiting
             showTypingIndicator();
 
             try {
@@ -723,85 +750,134 @@
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
-                        'Accept': 'application/json' // Optional but good practice
+                        'Accept': 'application/json' // Indicate we expect JSON back
                     },
-                    // IMPORTANT: Adjust the body structure if your FastAPI expects something different
+                    // Send the message in the format expected by the Pydantic model: { "message": "..." }
                     body: JSON.stringify({ message: userInput })
                 });
 
-                hideTypingIndicator(); // Hide indicator once response starts processing
+                // Hide typing indicator once we start processing the response or encounter an error
+                hideTypingIndicator();
 
                 if (!response.ok) {
-                    // Handle HTTP errors (like 404, 500)
-                    const errorText = await response.text(); // Try to get error details
-                    console.error('API Error:', response.status, errorText);
-                    addMessage(`Sorry, something went wrong (Error ${response.status}). Please try again.`, 'ai');
+                    // Handle HTTP errors (e.g., 404, 500, 422 Validation Error)
+                    let errorDetail = `HTTP error! Status: ${response.status}`;
+                    try {
+                        // Try to get more specific error detail from response body if available (FastAPI often provides JSON errors)
+                        const errorData = await response.json();
+                        if (errorData && errorData.detail) {
+                            // Handle FastAPI's validation error structure or other detail formats
+                           if (Array.isArray(errorData.detail)) {
+                                errorDetail = `Error: ${errorData.detail.map(e => `${e.loc.join('.')} - ${e.msg}`).join(', ')}`;
+                            } else {
+                                errorDetail = `Error: ${errorData.detail}`;
+                            }
+                        } else {
+                           errorDetail = await response.text(); // Fallback to plain text error
+                        }
+                    } catch (e) {
+                        // If parsing error response fails, use the status text
+                        errorDetail = response.statusText || errorDetail;
+                        console.error("Could not parse error response body:", e);
+                    }
+                    console.error('API Error:', response.status, errorDetail);
+                    addMessage(`Sorry, there was an issue communicating with the chatbot. ${errorDetail}`, 'ai'); // Display error to user
                     return;
                 }
 
+                // --- Process the successful JSON response ---
                 const data = await response.json();
 
-                // IMPORTANT: Adjust 'data.response' if your FastAPI returns the answer under a different key
-                const aiResponse = data.response || "Sorry, I couldn't get a proper response.";
-
-                addMessage(aiResponse, 'ai');
+                // IMPORTANT: Expecting the API to return { "response": "AI text..." }
+                if (data && typeof data.response === 'string') {
+                    const aiResponse = data.response;
+                    addMessage(aiResponse, 'ai'); // Add the actual AI response
+                } else if (data && data.error) {
+                    // Handle structured errors returned from the backend (e.g., API key missing)
+                    console.error('API returned an error:', data.error);
+                    addMessage(`Sorry, the chatbot encountered an issue: ${data.error}`, 'ai');
+                }
+                 else {
+                    // Handle cases where the 'response' key is missing or not a string
+                    console.error('API Response missing or invalid "response" key:', data);
+                    addMessage("Sorry, I received an unexpected response format from the chatbot.", 'ai');
+                }
 
             } catch (error) {
-                hideTypingIndicator(); // Hide indicator on network or other errors
+                hideTypingIndicator(); // Ensure indicator is hidden on any error
                 console.error('Fetch Error:', error);
-                addMessage("Sorry, I couldn't connect to the chatbot. Please check your connection or the server.", 'ai');
+                // Distinguish network errors from other potential issues
+                let errorMessage = "An unexpected error occurred while trying to send your message. Please try again.";
+                if (error instanceof TypeError && error.message.includes('fetch')) {
+                   errorMessage = "Sorry, I couldn't connect to the chatbot service. Please ensure it's running and reachable.";
+                }
+                addMessage(errorMessage, 'ai');
             }
         }
 
 
-        // --- Event Listeners ---
+        // --- Event Listeners Setup ---
 
         document.addEventListener('DOMContentLoaded', function() {
+            // Clear any previous messages on load (optional)
             clearMessages();
-            // Add initial welcome message
-            addMessage("Hello! I'm Gemini 2.0 Flash, your educational AI assistant. How can I help you today with your studies or research?", 'ai');
 
-            // Send message on button click
+            // Add an initial welcome message from the AI
+            addMessage("Hello! I'm EduconnectGPT, powered by Gemini. How can I assist you with your educational queries today?", 'ai');
+
+            // Send message when the send button is clicked
             sendButton.addEventListener('click', sendMessage);
 
-            // Send message on Enter key press (without Shift)
+            // Send message when Enter is pressed in the textarea (but not Shift+Enter)
             textarea.addEventListener('keydown', function(e) {
                 if (e.key === 'Enter' && !e.shiftKey) {
-                    e.preventDefault(); // Prevent adding a new line
+                    e.preventDefault(); // Prevent adding a newline character
                     sendMessage();
                 }
             });
 
-            // Auto-resize textarea
+            // Auto-resize textarea based on content, up to a max height
             textarea.addEventListener('input', function() {
-                this.style.height = 'auto'; // Reset height
-                // Set height based on scroll height, but limit max height
-                const maxHeight = 100; // Example max height in pixels
+                this.style.height = 'auto'; // Reset height to calculate scrollHeight correctly
+                const maxHeight = 100; // Define a maximum height in pixels
+                // Set height based on content, but cap it at maxHeight
                 this.style.height = Math.min(this.scrollHeight, maxHeight) + 'px';
             });
 
-            // Optional: Add agent switching logic if needed (currently just styles the main agent)
-            const mainAgent = document.getElementById('main-agent');
-            if (mainAgent) {
-                mainAgent.addEventListener('click', function() {
-                    const agentItems = document.querySelectorAll('.agent-item');
+            // --- Agent Switching Logic (Visual Only) ---
+            // Add click listeners to agent items to visually update the selection
+            const agentItems = document.querySelectorAll('.sidebar .agent-item');
+            agentItems.forEach(item => {
+                item.addEventListener('click', function(event) {
+                     // Only handle clicks on items that are *not* links meant to navigate away
+                     // or handle links differently if needed (e.g., prevent default and do something first)
+                     if (item.closest('a')) {
+                         // If it's a link, let the browser handle navigation
+                         // You could add logic here *before* navigation if needed
+                         console.log(`Navigating via link for: ${item.querySelector('.agent-name').textContent}`);
+                         return;
+                     }
+
+                    // Remove 'selected' class from all items
                     agentItems.forEach(i => i.classList.remove('selected'));
+                    // Add 'selected' class to the clicked item
                     this.classList.add('selected');
-                    // You might want to clear chat or add a message indicating the agent context
-                    // clearMessages();
-                    // addMessage("Switched to EduconnectGPT main agent.", "ai");
+
+                    // Optional: Clear chat or add a message when switching context
+                    // if (this.id === 'main-agent') {
+                    //     clearMessages();
+                    //     addMessage("Switched to EduconnectGPT. How can I help?", 'ai');
+                    // }
+                     // Add similar logic for other non-link agents if necessary
                 });
+            });
+
+            // Ensure the default agent is marked as selected on load
+            const defaultSelectedAgent = document.querySelector('.agent-item.selected');
+            if (!defaultSelectedAgent) {
+                 const mainAgent = document.getElementById('main-agent');
+                 if(mainAgent) mainAgent.classList.add('selected');
             }
-             // Add similar listeners for quiz-agent and summarization-agent if they should clear chat
-             // or perform other actions when clicked *before* navigating away.
-             // Example for quiz agent link (though navigation might happen immediately):
-            // const quizAgentLink = document.querySelector('a[href="quiz.html"]');
-            // if (quizAgentLink) {
-            //     quizAgentLink.addEventListener('click', function(e) {
-            //         // Optional: Perform actions before navigating
-            //         console.log("Navigating to Quiz Generation...");
-            //     });
-            // }
         });
 
     </script>
