--- a/educonnectGPT.html
+++ b/educonnectGPT.html
@@ -645,10 +645,9 @@
         const sendButton = document.querySelector('.send-button');
 
         // --- API Configuration ---
-        // Use the correct endpoint for your FastAPI chat function
         const apiEndpoint = 'http://127.0.0.1:2000/chat_get-answer/';
 
-        // --- Helper Functions (Keep these as they were) ---
+        // --- Helper Functions ---
 
         /**
          * Removes all messages from the chat window.
@@ -661,10 +660,11 @@
          * Displays a typing indicator with a spinner in the chat window.
          */
         function showTypingIndicator() {
+            // Avoid adding multiple indicators
             if (!document.getElementById('typing-indicator')) {
                 const typingHTML = `
                     <div class="typing-indicator" id="typing-indicator">
-                         <div class="message-avatar">
+                         <div class="message-avatar"> <!-- Placeholder for alignment -->
                             <img src="images/Educonnect_logo.png" alt="AI Avatar">
                          </div>
                         <div class="spinner-container">
@@ -674,6 +674,7 @@
                     </div>
                 `;
                 chatMessages.insertAdjacentHTML('beforeend', typingHTML);
+                // Scroll to show the indicator
                 chatMessages.scrollTop = chatMessages.scrollHeight;
             }
         }
@@ -695,11 +696,11 @@
          */
         function addMessage(text, sender) {
             const currentTime = new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-            const avatarSrc = sender === 'ai' ? 'images/Educonnect_logo.png' : 'images/user_avatar.png';
+            const avatarSrc = sender === 'ai' ? 'images/Educonnect_logo.png' : 'images/user_avatar.png'; // Assuming a default user avatar
             const avatarAlt = sender === 'ai' ? 'AI Avatar' : 'User Avatar';
-            const messageClass = sender === 'ai' ? 'ai' : (sender === 'user' ? 'user' : 'system');
+            const messageClass = sender === 'ai' ? 'ai' : (sender === 'user' ? 'user' : 'system'); // Add 'system' class if needed
 
-            const sanitizedText = text.replace(/</g, "<").replace(/>/g, ">");
+            const sanitizedText = text.replace(/</g, "<").replace(/>/g, ">"); // Basic XSS prevention
             const formattedText = sanitizedText.replace(/\n/g, '<br>');
 
             const messageHTML = `
@@ -708,25 +709,25 @@
                         <img src="${avatarSrc}" alt="${avatarAlt}">
                     </div>
                     <div class="message-content">
-                        <div>${formattedText}</div>
+                        <div>${formattedText}</div> <!-- Use innerHTML for <br> tags -->
                         <div class="message-time">${currentTime}</div>
                     </div>
                 </div>
             `;
 
             chatMessages.insertAdjacentHTML('beforeend', messageHTML);
-            chatMessages.scrollTop = chatMessages.scrollHeight;
+            chatMessages.scrollTop = chatMessages.scrollHeight; // Scroll to the bottom
         }
 
-        // --- Main Chat Logic (MODIFIED FOR STRING RESPONSE) ---
+        // --- Main Chat Logic ---
 
         /**
-         * Sends the user's message to the backend API and displays the plain text response.
+         * Sends the user's message to the backend API and displays the response.
          */
         async function sendMessage() {
             const userInput = textarea.value.trim();
             if (userInput === '') {
-                return;
+                return; // Don't send empty messages
             }
 
             addMessage(userInput, 'user');
@@ -736,101 +737,131 @@
             showTypingIndicator();
 
             try {
-                // --- Call the FastAPI endpoint ---
                 const response = await fetch(apiEndpoint, {
                     method: 'POST',
                     headers: {
-                        // Still send JSON, as FastAPI's Pydantic model expects it
                         'Content-Type': 'application/json',
-                        // Accept header might be less critical if backend only sends text
-                        'Accept': 'text/plain, */*' // Indicate preference for text, but accept anything
+                        'Accept': 'application/json' // Still good practice to accept JSON, even if we expect a string sometimes
                     },
                     body: JSON.stringify({ message: userInput })
                 });
 
-                hideTypingIndicator(); // Hide indicator after getting response status
+                hideTypingIndicator();
 
                 if (!response.ok) {
-                    // Handle HTTP errors - Read the error body as text
                     let errorDetail = `HTTP error! Status: ${response.status}`;
                     try {
-                        // Attempt to read error message as text
-                        const errorText = await response.text();
-                        if (errorText) {
-                            errorDetail = `Error: ${errorText}`;
+                        const errorData = await response.json();
+                        if (errorData && errorData.detail) {
+                           if (Array.isArray(errorData.detail)) {
+                                errorDetail = `Error: ${errorData.detail.map(e => `${e.loc.join('.')} - ${e.msg}`).join(', ')}`;
+                            } else if (typeof errorData.detail === 'string'){
+                                errorDetail = `Error: ${errorData.detail}`; // Handle FastAPI detail string
+                            } else {
+                               errorDetail = `Error: ${JSON.stringify(errorData.detail)}`; // Handle other detail types
+                            }
                         } else {
-                             errorDetail = response.statusText || errorDetail; // Fallback
+                           errorDetail = await response.text(); // Fallback to plain text error
+                           // If the error response IS the detail string itself (common with HTTPException)
+                           if (!errorDetail.startsWith('Error:')) errorDetail = `Error: ${errorDetail}`;
                         }
                     } catch (e) {
-                        console.error("Could not read error response body:", e);
-                        errorDetail = response.statusText || errorDetail;
+                         try {
+                             // If parsing as JSON fails, try getting the raw text
+                             errorDetail = await response.text();
+                             if (!errorDetail.startsWith('Error:')) errorDetail = `Error: ${errorDetail}`;
+                         } catch (finalError) {
+                             // If getting text also fails, use statusText
+                             errorDetail = response.statusText || errorDetail;
+                             console.error("Could not parse or read error response body:", e, finalError);
+                         }
                     }
                     console.error('API Error:', response.status, errorDetail);
                     addMessage(`Sorry, there was an issue communicating with the chatbot. ${errorDetail}`, 'ai');
                     return;
                 }
 
-                // --- Process the successful response AS TEXT ---
-                // IMPORTANT: Use response.text() because the API returns a plain string
-                const aiResponseText = await response.text();
+                // --- Process the successful response ---
+                // Since the backend returns a plain string, response.json() will parse it into a JS string.
+                const data = await response.json();
 
-                if (aiResponseText) {
-                     // Directly use the text response
-                    addMessage(aiResponseText, 'ai');
-                } else {
-                    // Handle cases where the API returned an empty string successfully (might be valid or an issue)
-                    console.warn('API returned an empty string.');
-                    // Optionally add a message, or do nothing if empty is acceptable
-                    // addMessage("Received an empty response from the chatbot.", 'ai');
+                // --- MODIFIED HANDLING ---
+                // Check if the data received IS a string (the AI response)
+                if (typeof data === 'string' && data.trim() !== '') {
+                    const aiResponse = data; // The data itself is the response string
+                    addMessage(aiResponse, 'ai'); // Add the actual AI response
                 }
+                // Optional: Keep a check for structured errors IF your backend might sometimes return them
+                else if (data && typeof data === 'object' && data.error) {
+                    console.error('API returned a structured error:', data.error);
+                    addMessage(`Sorry, the chatbot encountered an issue: ${data.error}`, 'ai');
+                }
+                // Handle cases where the response is not a non-empty string or a known error object
+                else {
+                    console.error('API Response was not the expected string format:', data);
+                    addMessage("Sorry, I received an unexpected response format from the chatbot.", 'ai');
+                }
+                // --- END OF MODIFIED HANDLING ---
 
             } catch (error) {
-                hideTypingIndicator(); // Ensure indicator is hidden on network/fetch error
+                hideTypingIndicator();
                 console.error('Fetch Error:', error);
                 let errorMessage = "An unexpected error occurred while trying to send your message. Please try again.";
                 if (error instanceof TypeError && error.message.includes('fetch')) {
                    errorMessage = "Sorry, I couldn't connect to the chatbot service. Please ensure it's running and reachable.";
+                } else if (error instanceof SyntaxError) {
+                    // This might happen if the response is truly not valid JSON (e.g., empty or malformed)
+                    // but response.ok was true, which is unusual.
+                    errorMessage = "Received an invalid response from the chatbot.";
+                    console.error("Response body might not be valid JSON:", error);
                 }
                 addMessage(errorMessage, 'ai');
             }
         }
 
 
-        // --- Event Listeners Setup (Keep these as they were) ---
-
+        // --- Event Listeners Setup ---
+        // (Keep the rest of your JavaScript code as it was, including event listeners setup)
         document.addEventListener('DOMContentLoaded', function() {
+            // Clear any previous messages on load (optional)
             clearMessages();
+
+            // Add an initial welcome message from the AI
             addMessage("Hello! I'm EduconnectGPT, powered by Gemini. How can I assist you with your educational queries today?", 'ai');
 
+            // Send message when the send button is clicked
             sendButton.addEventListener('click', sendMessage);
 
+            // Send message when Enter is pressed in the textarea (but not Shift+Enter)
             textarea.addEventListener('keydown', function(e) {
                 if (e.key === 'Enter' && !e.shiftKey) {
-                    e.preventDefault();
+                    e.preventDefault(); // Prevent adding a newline character
                     sendMessage();
                 }
             });
 
+            // Auto-resize textarea based on content, up to a max height
             textarea.addEventListener('input', function() {
-                this.style.height = 'auto';
-                const maxHeight = 100;
+                this.style.height = 'auto'; // Reset height to calculate scrollHeight correctly
+                const maxHeight = 100; // Define a maximum height in pixels
+                // Set height based on content, but cap it at maxHeight
                 this.style.height = Math.min(this.scrollHeight, maxHeight) + 'px';
             });
 
-            // Agent Switching Logic (Visual Only)
+            // --- Agent Switching Logic (Visual Only) ---
             const agentItems = document.querySelectorAll('.sidebar .agent-item');
             agentItems.forEach(item => {
                 item.addEventListener('click', function(event) {
                      if (item.closest('a')) {
                          console.log(`Navigating via link for: ${item.querySelector('.agent-name').textContent}`);
-                         return; // Let the browser handle navigation for links
+                         return;
                      }
                     agentItems.forEach(i => i.classList.remove('selected'));
                     this.classList.add('selected');
+                    // Optional logic here
                 });
             });
 
-            // Ensure default selection
             const defaultSelectedAgent = document.querySelector('.agent-item.selected');
             if (!defaultSelectedAgent) {
                  const mainAgent = document.getElementById('main-agent');
